force-app/main/default/objects/Delivery__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <label>Attempt Count</label>
    <summaryForeignKey>Delivery_Attempt__c.Delivery__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>