force-app/main/default/objects/Delivery__c/fields/Delivery_Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Due_Date_Time__c</fullName>
    <description>Deadline for completion of the delivery.</description>
    <label>Delivery Due Date/Time</label>
    <type>DateTime</type>
</CustomField>