force-app/main/default/objects/Delivery__c/fields/Delivery_Party__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Party__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>