force-app/main/default/objects/Delivery__c/fields/First_Look_Review__c.field-meta.xml
<CustomField>
    <fullName>First_Look_Review__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>First Look Review</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>First_Look_Review__c.WorkOrder__c</field>
            <operation>equals</operation>
            <valueField>$Source.WorkOrder__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>First_Look_Review__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>