force-app/main/default/objects/Delivery__c/fields/Integration_Key__c.field-meta.xml
<CustomField>
    <fullName>Integration_Key__c</fullName>
    <description>Normalized source key (e.g. SourceSystem:SourceDeliveryId). Required for integrated records — enforce via validation rule since requirement is conditional.</description>
    <externalId>true</externalId>
    <label>Integration Key</label>
    <length>160</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>