force-app/main/default/objects/Delivery__c/fields/Is_First_Look_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Look_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Look Delivery</label>
    <type>Checkbox</type>
</CustomField>