force-app/main/default/objects/Delivery__c/fields/Latest_Attempt_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Latest_Attempt_Date_Time__c</fullName>
    <description>Automation-maintained timestamp of the latest Delivery Attempt.</description>
    <label>Latest Attempt Date/Time</label>
    <type>DateTime</type>
</CustomField>