force-app/main/default/objects/Delivery__c/fields/Next_Attempt_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Attempt_Date_Time__c</fullName>
    <description>Planned next delivery attempt.</description>
    <label>Next Attempt Date/Time</label>
    <type>DateTime</type>
</CustomField>