force-app/main/default/objects/Delivery__c/fields/Picking_Up_Records__c.field-meta.xml
<CustomField>
    <fullName>Picking_Up_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the visit includes record pickup.</description>
    <label>Picking Up Records</label>
    <type>Checkbox</type>
</CustomField>