force-app/main/default/objects/Delivery__c/fields/SOR_Delivery_Id__c.field-meta.xml
<CustomField>
    <fullName>SOR_Delivery_Id__c</fullName>
    <description>Source delivery identifier. Required for integrated records — enforce via validation rule since requirement is conditional.</description>
    <label>SOR Delivery Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>