force-app/main/default/objects/Delivery__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Originating system of record. Required for integrated records — enforce via validation rule since requirement is conditional.</description>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DataTrac</fullName>
            </value>
            <value>
                <fullName>Solaria</fullName>
            </value>
            <value>
                <fullName>Doculogix</fullName>
            </value>
            <value>
                <fullName>WinCopyDigital</fullName>
            </value>
            <value>
                <fullName>WinCopyRecords</fullName>
            </value>
            <value>
                <fullName>CaseGator</fullName>
            </value>
            <value>
                <fullName>WinServPlus</fullName>
            </value>
            <value>
                <fullName>ProcessMaster</fullName>
            </value>
            <value>
                <fullName>ServManager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>